k8s/RatingsApp/5a-http-ratings-web-ingress.yaml
# NON-TLS - HTTP Only

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ratings-web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ratings-web
            port: 
              number: 80
